# MLOps_training

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
models/: best_model.pkl
notebooks/: EDA.ipynb
src/: api.py  app.py  data_preprocessing.py  feature_engineering.py  model.py
